# onnxruntime

./: .gitignore  README.md  VERSION_NUMBER  build.sh  build_release.sh  gme.sh  onnxruntime.drawio  recompile_debug.so.sh  recompile_release.so.sh  requirements.txt.in  run_gpu.sh  setup.py  sync.sh  sync_.sh  test.py
articles/: ch1.md  gdb.md
cmake/: CMakeLists.txt  CMakeLists.txt.disable.tests  adjust_global_compile_flags.cmake  deps.txt  onnxruntime_common.cmake  onnxruntime_gamma.cmake  onnxruntime_session.cmake  onnxruntime_unittests.cmake
docs/api/: index.html  manifest.json
fuheng/: CMakeLists.txt  install_opencv.sh  m.h  main.cpp
gme_play/: det.py  direct_conv.md  node.py  o.py  onnxruntime_profile__2023-01-12_05-48-44.csv
gme_play/avx/: m.cpp  npy.h
gme_play/day0/: lr_with_init.py  requirements.txt
gme_play/day1/: m.cpp  run_ort.py  trans.py
gme_play/day10/: gamma_hc.S  hc.asm  main.cpp  ort_conv2.cpp  run_release.sh
gme_play/day11/: hc.cpp  main.cpp  ort_conv.cpp  ort_conv2.cpp  readme.md  run_debug.sh  run_release.sh
gme_play/day12/: main.cpp  ort_conv.cpp  readme.md  util.h  wfh.br  wfh.cpp  wfh.csv  wfh.h  wfh_test.cpp
gme_play/day13/: run_test.sh  wfh_test.cpp
gme_play/day14/: matrix_fuse_test.cpp  readme.md  run_test.sh  wfh_test.cpp
gme_play/day15/: main.cpp  ort_conv.h
gme_play/day16/: main.cpp
gme_play/day18/: CMakeLists.txt  README.md  block_compute.asm  direct_conv.h  gme_conv.asm  main.cpp  main_tunable.cpp  ort_conv.cpp  ort_conv.h  r.sh  (+6 more)
onnxruntime/: __init__.py
tutorial/: det.py  det.py.bk  direct_conv.md  interview_question.md
tutorial/day9/: CMakeLists.txt  ort_conv2.cpp  run_prof.sh
(+255 files in other folders)
